; ModuleID = '/home/carl/AnghaBench/TDengine/src/system/lite/src/extr_dnodeMgmt.spec.c_taosSendSimpleRspToMnode.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/system/lite/src/extr_dnodeMgmt.spec.c_taosSendSimpleRspToMnode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @taosSendSimpleRspToMnode(i32* %0, i8 signext %1, i8 signext %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8, align 1
  %7 = alloca i8, align 1
  %8 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8 %1, i8* %6, align 1
  store i8 %2, i8* %7, align 1
  %9 = load i8, i8* %6, align 1
  %10 = call i8* @taosBuildRspMsgToMnode(i32 0, i8 signext %9)
  store i8* %10, i8** %8, align 8
  %11 = load i8*, i8** %8, align 8
  %12 = icmp eq i8* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %20

14:                                               ; preds = %3
  %15 = load i8, i8* %7, align 1
  %16 = load i8*, i8** %8, align 8
  store i8 %15, i8* %16, align 1
  %17 = load i8*, i8** %8, align 8
  %18 = load i8, i8* %7, align 1
  %19 = call i32 @taosSendMsgToMnode(i32 0, i8* %17, i8 signext %18)
  store i32 0, i32* %4, align 4
  br label %20

20:                                               ; preds = %14, %13
  %21 = load i32, i32* %4, align 4
  ret i32 %21
}

declare dso_local i8* @taosBuildRspMsgToMnode(i32, i8 signext) #1

declare dso_local i32 @taosSendMsgToMnode(i32, i8*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
